# python-coding-dojo

./: README.md  pyproject.toml
src/python_algorithms/algorithms/: algorithms.py
src/python_algorithms/data_structures/: date_utils.py  queue.py  stack.py
src/python_algorithms/design_patterns/: dependency_injection.py
tests/algorithms/backtracking/: test_all_combinations.py  test_all_subsequences.py  test_coloring.py  test_combination_sum.py  test_crossword_puzzle_solver.py
tests/algorithms/math/: test_armstrong_number.py  test_calculator.py  test_factorial.py  test_leap_years.py  test_numbers_util.py  test_prime_factors.py
tests/algorithms/recursion/: test_fibonacci.py
tests/algorithms/strings/: test_balanced_parentheses.py  test_frog_river_one.py  test_perm_check.py  test_string_util.py
tests/data_structures/: test_dateutils.py  test_stack.py
tests/data_structures/arrays/: Implementation.py  Introduction.py  array_duplicate_finder.py
tests/design_patterns/: test_hsm.py
tests/design_patterns/behavioral/: test_catalog.py  test_chain_of_responsability.py  test_chaining_method.py  test_command.py  test_iterator.py  test_iterator_alt.py  test_mediator.py  test_memento.py  test_observer.py  test_publish_subscribe.py  test_registry.py  test_state.py  test_strategy.py
tests/design_patterns/creational/: test_abstract_factory.py  test_borg.py  test_builder.py  test_lazy.py  test_pool.py  test_prototype.py
tests/design_patterns/structural/: test_adapter.py  test_bridge.py  test_decorator.py  test_proxy.py
tests/problems/codility/: test_count_div.py  (+3 more)
(+531 files in other folders)
