[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-coding-dojo"
version = "0.1.0"
description = "A Python project with algorithms, design patterns, problems and tests"
requires-python = ">=3.8"
dependencies = ["pytest"]

# [tool.setuptools.packages.find]
# where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

[tool.pytest.ini_options]
# pythonpath = ["src"]
minversion = "7.0"
# addopts = "-v --cov=myproject --cov-report=html"
testpaths = ["tests"]
